# ics-openvpn

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  native_build_debug.bat  native_build_release.bat  settings.gradle.kts
main/: build.gradle.kts
main/src/main/: AndroidManifest.xml
main/src/main/aidl/de/blinkt/openvpn/api/: IOpenVPNAPIService.aidl  IOpenVPNStatusCallback.aidl
main/src/main/aidl/de/blinkt/openvpn/core/: IOpenVPNServiceInternal.aidl  IServiceStatus.aidl  IStatusCallbacks.aidl  LogItem.aidl  VpnTunnel.aidl
main/src/main/assets/: pie_openvpn.arm64-v8a  pie_openvpn.x86  ta.key
main/src/main/cpp/: CMakeLists.txt
main/src/main/cpp/jbcrypto/: jbcrypto.cpp
main/src/main/cpp/opvpnutil/: jniglue.c  jniglue.h  scan_ifs.c  sslspeed.c
main/src/main/java/de/blinkt/openvpn/: FileProvider.java  LaunchOpenVPN.java  OnBootReceiver.java  VpnProfile.java
main/src/main/java/de/blinkt/openvpn/activities/: DisconnectVPN.java
main/src/main/java/de/blinkt/openvpn/api/: AppRestrictions.java  ConfirmDialog.java  ExternalAppDatabase.java  ExternalOpenVPNService.java  GrantPermissionsActivity.java  RemoteAction.java
main/src/main/java/de/blinkt/openvpn/core/: AccessibleResource.java  CIDRIP.java  ConfigParser.java  Connection.java  ConnectionStatus.java  DeviceStateReceiver.java  ICSOpenVPNApplication.java  LogFileHandler.java  LogItem.java  LogLevel.java  LogSource.java  NetworkSpace.java  OpenVPNLaunchHelper.java  OpenVPNManagement.java  OpenVPNManagementThread.java  OpenVPNNotificationHelper.java  OpenVPNService.java  OpenVPNStatusService.java  OpenVPNThread.java  PasswordCache.java  Preferences.java  ProfileManager.java  StatusListener.java  TrafficHistory.java  VpnStatus.java  VpnTunnel.java
main/src/main/java/de/blinkt/openvpn/utils/: ActivityUtils.java  CrashHandler.java  HttpURI.java  IOUtils.java  MailUtils.java  NativeUtils.java  NetworkUtils.java  OpenVPNUtils.java  PRNGFixes.java  ProxyDetection.java  StringUtils.java  X509Utils.java
main/src/main/res/layout/: launch_vpn.xml  userpass.xml
main/src/main/res/values/: arrays.xml  colours.xml  strings.xml  untranslatable.xml
main/src/main/res/xml/: app_restrictions.xml
main/src/skeleton/: AndroidManifest.xml
main/src/skeleton/java/de/blinkt/openvpn/activities/: NotImplemented.java
main/src/skeleton/res/values/: styles.xml
main/src/test/java/de/blinkt/openvpn/core/: TestConfigGenerator.java  TestConfigParser.kt
main/src/ui/: AndroidManifest.xml
main/src/ui/java/de/blinkt/openvpn/: OpenVPNTileService.java
main/src/ui/java/de/blinkt/openvpn/activities/: BaseActivity.java  ConfigConverter.kt  CreateShortcuts.java  CredentialsPopup.kt  DiagnosticActivity.java  GeneralActivity.java  MainActivity.java  VPNPreferences.java
main/src/ui/java/de/blinkt/openvpn/fragments/: AboutFragment.java  AccessibleResourceAdapter.java  AccessibleResourceFragment.java  AlertDialogFragment.java  ConnectionsAdapter.java  FaqFragment.java  FaqViewAdapter.java  FilePickerUtils.java  GeneralSettings.java  GraphFragment.java  KeyChainSettingsFragment.kt  LogFragment.java  PackageAdapter.kt  PasswordDialogFragment.kt  SendDumpFragment.java  Settings_Allowed_Apps.kt  Settings_Authentication.java  Settings_Basic.java  Settings_Connections.java  Settings_Fragment.java  Settings_IP.java  Settings_Obscure.java  Settings_PreferenceFragment.java  Settings_Routing.java  Settings_UserEditable.java  ShowConfigFragment.java  VPNProfileList.java
main/src/ui/java/de/blinkt/openvpn/views/: DefaultVPNListPreference.java  FileSelectLayout.java  RemoteCNPreference.java  RemoteCNPreferenceDialog.java  ScreenSlidePagerAdapter.java
main/src/ui/res/drawable/: change_add_getway.xml  change_reduce_getway.xml
main/src/ui/res/layout/: about.xml  accessible_resource_item.xml  accessible_resource_list.xml  allowed_app_item.xml  allowed_app_settings.xml  allowed_apps.xml  basic_settings.xml  config_converter.xml  connections.xml  diagnostic_activity.xml  faq.xml  faq_card.xml  file_select.xml  general_activity.xml  keystore_selector.xml  log_fragment.xml  log_silders.xml  main_activity.xml  server_card.xml  server_footer.xml  settings_usereditable.xml  share_fab.xml  tlsremote.xml  view_config.xml  vpn_list_item.xml  vpn_profile_list.xml
main/src/ui/res/layout-v21/: profile_list_fabs.xml  share_fab.xml  tabs.xml
main/src/ui/res/menu/: allowed_apps.xml  config_menu.xml  log_menu.xml  main_menu.xml  vpnpreferences_menu.xml
main/src/ui/res/values/: styles.xml
main/src/ui/res/values-zh-rCN/: arrays.xml  strings.xml
main/src/ui/res/xml/: general_settings.xml  share_paths.xml  vpn_authentification.xml  vpn_ipsettings.xml  vpn_obscure.xml  vpn_routing.xml
permission/: build.gradle
permission/src/main/java/com/yanzhenjie/permission/task/: TaskExecutor.java
remoteExample/: build.gradle
remoteExample/src/main/: AndroidManifest.xml
remoteExample/src/main/assets/: test.conf
remoteExample/src/main/java/de/blinkt/openvpn/api/: APIVpnProfile.java
remoteExample/src/main/java/de/blinkt/openvpn/remote/: MainActivity.java  MainFragment.java
remoteExample/src/main/res/layout/: fragment_main.xml
remoteExample/src/main/res/menu/: main.xml
remoteExample/src/main/res/values/: strings.xml
